Semester-4/Compiler Design/Assignment/UPDATE/y.output
Grammar

    0 $accept: line $end

    1 line: update

    2 update: UPDATE table set
    3       | error

    4 table: IDENTIFIER
    5      | error

    6 set: SET column where
    7    | SET column semicolon NEWLINE
    8    | error

    9 column: IDENTIFIER ASSIGN TEXT
   10       | IDENTIFIER ASSIGN NUMBER
   11       | IDENTIFIER ASSIGN TEXT COMMA column
   12       | IDENTIFIER ASSIGN NUMBER COMMA column
   13       | error

   14 where: WHERE condition semicolon NEWLINE
   15      | error

   16 condition: IDENTIFIER CONDITION IDENTIFIER
   17          | IDENTIFIER CONDITION TEXT
   18          | IDENTIFIER CONDITION NUMBER
   19          | IDENTIFIER CONDITION IDENTIFIER ANDOR condition
   20          | IDENTIFIER CONDITION TEXT ANDOR condition
   21          | IDENTIFIER CONDITION NUMBER ANDOR condition
   22          | NUMBER CONDITION NUMBER
   23          | NUMBER CONDITION NUMBER ANDOR condition
   24          | error

   25 semicolon: SEMICOLON
   26          | error


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3 5 8 13 15 24 26
    UPDATE (258) 2
    IDENTIFIER (259) 4 9 10 11 12 16 17 18 19 20 21
    SET (260) 6 7
    ASSIGN (261) 9 10 11 12
    WHERE (262) 14
    ANDOR (263) 19 20 21 23
    CONDITION (264) 16 17 18 19 20 21 22 23
    SEMICOLON (265) 25
    TEXT (266) 9 11 17 20
    NUMBER (267) 10 12 18 21 22 23
    COMMA (268) 11 12
    NEWLINE (269) 7 14


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    line (16)
        on left: 1
        on right: 0
    update (17)
        on left: 2 3
        on right: 1
    table (18)
        on left: 4 5
        on right: 2
    set (19)
        on left: 6 7 8
        on right: 2
    column (20)
        on left: 9 10 11 12 13
        on right: 6 7 11 12
    where (21)
        on left: 14 15
        on right: 6
    condition (22)
        on left: 16 17 18 19 20 21 22 23 24
        on right: 14 19 20 21 23
    semicolon (23)
        on left: 25 26
        on right: 7 14


State 0

    0 $accept: • line $end

    error   shift, and go to state 1
    UPDATE  shift, and go to state 2

    line    go to state 3
    update  go to state 4


State 1

    3 update: error •

    $default  reduce using rule 3 (update)


State 2

    2 update: UPDATE • table set

    error       shift, and go to state 5
    IDENTIFIER  shift, and go to state 6

    table  go to state 7


State 3

    0 $accept: line • $end

    $end  shift, and go to state 8


State 4

    1 line: update •

    $default  reduce using rule 1 (line)


State 5

    5 table: error •

    $default  reduce using rule 5 (table)


State 6

    4 table: IDENTIFIER •

    $default  reduce using rule 4 (table)


State 7

    2 update: UPDATE table • set

    error  shift, and go to state 9
    SET    shift, and go to state 10

    set  go to state 11


State 8

    0 $accept: line $end •

    $default  accept


State 9

    8 set: error •

    $default  reduce using rule 8 (set)


State 10

    6 set: SET • column where
    7    | SET • column semicolon NEWLINE

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13

    column  go to state 14


State 11

    2 update: UPDATE table set •

    $default  reduce using rule 2 (update)


State 12

   13 column: error •

    $default  reduce using rule 13 (column)


State 13

    9 column: IDENTIFIER • ASSIGN TEXT
   10       | IDENTIFIER • ASSIGN NUMBER
   11       | IDENTIFIER • ASSIGN TEXT COMMA column
   12       | IDENTIFIER • ASSIGN NUMBER COMMA column

    ASSIGN  shift, and go to state 15


State 14

    6 set: SET column • where
    7    | SET column • semicolon NEWLINE

    error      shift, and go to state 16
    WHERE      shift, and go to state 17
    SEMICOLON  shift, and go to state 18

    where      go to state 19
    semicolon  go to state 20


State 15

    9 column: IDENTIFIER ASSIGN • TEXT
   10       | IDENTIFIER ASSIGN • NUMBER
   11       | IDENTIFIER ASSIGN • TEXT COMMA column
   12       | IDENTIFIER ASSIGN • NUMBER COMMA column

    TEXT    shift, and go to state 21
    NUMBER  shift, and go to state 22


State 16

   15 where: error •
   26 semicolon: error •

    NEWLINE   reduce using rule 26 (semicolon)
    $default  reduce using rule 15 (where)


State 17

   14 where: WHERE • condition semicolon NEWLINE

    error       shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    NUMBER      shift, and go to state 25

    condition  go to state 26


State 18

   25 semicolon: SEMICOLON •

    $default  reduce using rule 25 (semicolon)


State 19

    6 set: SET column where •

    $default  reduce using rule 6 (set)


State 20

    7 set: SET column semicolon • NEWLINE

    NEWLINE  shift, and go to state 27


State 21

    9 column: IDENTIFIER ASSIGN TEXT •
   11       | IDENTIFIER ASSIGN TEXT • COMMA column

    COMMA  shift, and go to state 28

    $default  reduce using rule 9 (column)


State 22

   10 column: IDENTIFIER ASSIGN NUMBER •
   12       | IDENTIFIER ASSIGN NUMBER • COMMA column

    COMMA  shift, and go to state 29

    $default  reduce using rule 10 (column)


State 23

   24 condition: error •

    $default  reduce using rule 24 (condition)


State 24

   16 condition: IDENTIFIER • CONDITION IDENTIFIER
   17          | IDENTIFIER • CONDITION TEXT
   18          | IDENTIFIER • CONDITION NUMBER
   19          | IDENTIFIER • CONDITION IDENTIFIER ANDOR condition
   20          | IDENTIFIER • CONDITION TEXT ANDOR condition
   21          | IDENTIFIER • CONDITION NUMBER ANDOR condition

    CONDITION  shift, and go to state 30


State 25

   22 condition: NUMBER • CONDITION NUMBER
   23          | NUMBER • CONDITION NUMBER ANDOR condition

    CONDITION  shift, and go to state 31


State 26

   14 where: WHERE condition • semicolon NEWLINE

    error      shift, and go to state 32
    SEMICOLON  shift, and go to state 18

    semicolon  go to state 33


State 27

    7 set: SET column semicolon NEWLINE •

    $default  reduce using rule 7 (set)


State 28

   11 column: IDENTIFIER ASSIGN TEXT COMMA • column

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13

    column  go to state 34


State 29

   12 column: IDENTIFIER ASSIGN NUMBER COMMA • column

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13

    column  go to state 35


State 30

   16 condition: IDENTIFIER CONDITION • IDENTIFIER
   17          | IDENTIFIER CONDITION • TEXT
   18          | IDENTIFIER CONDITION • NUMBER
   19          | IDENTIFIER CONDITION • IDENTIFIER ANDOR condition
   20          | IDENTIFIER CONDITION • TEXT ANDOR condition
   21          | IDENTIFIER CONDITION • NUMBER ANDOR condition

    IDENTIFIER  shift, and go to state 36
    TEXT        shift, and go to state 37
    NUMBER      shift, and go to state 38


State 31

   22 condition: NUMBER CONDITION • NUMBER
   23          | NUMBER CONDITION • NUMBER ANDOR condition

    NUMBER  shift, and go to state 39


State 32

   26 semicolon: error •

    $default  reduce using rule 26 (semicolon)


State 33

   14 where: WHERE condition semicolon • NEWLINE

    NEWLINE  shift, and go to state 40


State 34

   11 column: IDENTIFIER ASSIGN TEXT COMMA column •

    $default  reduce using rule 11 (column)


State 35

   12 column: IDENTIFIER ASSIGN NUMBER COMMA column •

    $default  reduce using rule 12 (column)


State 36

   16 condition: IDENTIFIER CONDITION IDENTIFIER •
   19          | IDENTIFIER CONDITION IDENTIFIER • ANDOR condition

    ANDOR  shift, and go to state 41

    $default  reduce using rule 16 (condition)


State 37

   17 condition: IDENTIFIER CONDITION TEXT •
   20          | IDENTIFIER CONDITION TEXT • ANDOR condition

    ANDOR  shift, and go to state 42

    $default  reduce using rule 17 (condition)


State 38

   18 condition: IDENTIFIER CONDITION NUMBER •
   21          | IDENTIFIER CONDITION NUMBER • ANDOR condition

    ANDOR  shift, and go to state 43

    $default  reduce using rule 18 (condition)


State 39

   22 condition: NUMBER CONDITION NUMBER •
   23          | NUMBER CONDITION NUMBER • ANDOR condition

    ANDOR  shift, and go to state 44

    $default  reduce using rule 22 (condition)


State 40

   14 where: WHERE condition semicolon NEWLINE •

    $default  reduce using rule 14 (where)


State 41

   19 condition: IDENTIFIER CONDITION IDENTIFIER ANDOR • condition

    error       shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    NUMBER      shift, and go to state 25

    condition  go to state 45


State 42

   20 condition: IDENTIFIER CONDITION TEXT ANDOR • condition

    error       shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    NUMBER      shift, and go to state 25

    condition  go to state 46


State 43

   21 condition: IDENTIFIER CONDITION NUMBER ANDOR • condition

    error       shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    NUMBER      shift, and go to state 25

    condition  go to state 47


State 44

   23 condition: NUMBER CONDITION NUMBER ANDOR • condition

    error       shift, and go to state 23
    IDENTIFIER  shift, and go to state 24
    NUMBER      shift, and go to state 25

    condition  go to state 48


State 45

   19 condition: IDENTIFIER CONDITION IDENTIFIER ANDOR condition •

    $default  reduce using rule 19 (condition)


State 46

   20 condition: IDENTIFIER CONDITION TEXT ANDOR condition •

    $default  reduce using rule 20 (condition)


State 47

   21 condition: IDENTIFIER CONDITION NUMBER ANDOR condition •

    $default  reduce using rule 21 (condition)


State 48

   23 condition: NUMBER CONDITION NUMBER ANDOR condition •

    $default  reduce using rule 23 (condition)
